[package]
name = "digstore-prover"
version = "0.1.0"
edition = "2021"
description = "Execution proofs and Chia chain anchoring for digstore (§13)."

[dependencies]
digstore-core = { path = "../digstore-core" }
digstore-crypto = { path = "../digstore-crypto" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# risc0 backend (real ZK) — all optional, all referenced by the `risc0` feature below
risc0-zkvm = { version = "1.2", optional = true }
digstore-guest-risc0 = { path = "guest", optional = true }
bincode = { version = "1", optional = true }

[build-dependencies]
risc0-build = { version = "1.2", optional = true }

[features]
default = []
risc0 = ["dep:risc0-zkvm", "dep:digstore-guest-risc0", "dep:bincode", "dep:risc0-build"]
hardware-attest = []

[dev-dependencies]
serde_json = "1"

[package.metadata.risc0]
methods = ["guest"]
