[package]
name = "digstore-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "digstore_remote"
path = "src/lib.rs"

[dependencies]
digstore-core = { path = "../digstore-core" }
digstore-store = { path = "../digstore-store" }
digstore-host = { path = "../digstore-host" }
digstore-crypto = { path = "../digstore-crypto" }
axum = { version = "0.7", features = ["http1", "json", "tokio", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tower = { version = "0.4", features = ["util"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
base64 = "0.22"
getrandom = "0.2"

