[package]
name = "digstore-store"
license = "GPL-2.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
digstore-core = { path = "../digstore-core" }
digstore-chunker = { path = "../digstore-chunker" }
digstore-crypto = { path = "../digstore-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
