# Empty [workspace] table makes this crate its own workspace root, fully
# isolated from the digstore crates workspace at the repo root. Building the
# installer therefore never compiles anything under crates/.
[workspace]

[package]
name = "digstore-installer"
version = "1.0.0"
description = "DigStore desktop installer (DIG Network)"
authors = ["DIG Network"]
edition = "2021"
# Standalone: deliberately NOT a member of the root workspace so building the
# installer never drags in / rebuilds the digstore crates under crates/.

[lib]
name = "digstore_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

[features]
# This feature is used to enable the custom-protocol when bundling.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Keep the installer small and fast; overflow checks on (matches workspace policy).
overflow-checks = true
opt-level = "s"
lto = true
strip = true
