# Empty [workspace] table makes this crate its own workspace root, fully
# isolated from the digstore crates workspace at the repo root. Building the
# installer therefore never compiles anything under crates/.
[workspace]

[package]
name = "digstore-installer"
version = "1.0.0"
description = "DigStore desktop installer (DIG Network)"
authors = ["DIG Network"]
edition = "2021"
# Standalone: deliberately NOT a member of the root workspace so building the
# installer never drags in / rebuilds the digstore crates under crates/.

[lib]
name = "digstore_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

[target.'cfg(windows)'.dependencies]
# User-PATH update: read/write HKCU\Environment directly (no setx truncation,
# no machine-PATH duplication) and broadcast WM_SETTINGCHANGE so running
# processes pick up the change. Both MIT/Apache-2.0 (see cargo-deny).
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[features]
# This feature is used to enable the custom-protocol when bundling.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Keep the installer small and fast; overflow checks on (matches workspace policy).
overflow-checks = true
opt-level = "s"
lto = true
strip = true
